Release 1.5 (11/23/2009)
========================

* Fix bug when cache value doesn't exist causing has_key to throw
  an exception rather than return False. Fixes #24.
* Fix bug where getpid under GAE is used improperly to assume it
  should be a non-string. Fixes #22.
* Add cache_region decorator that works *before* configuration of
  the cache regions have been completed for use in module-level
  decorations.
* Fix bug where has_value sees the value before its removed.
* Improved accuracy of "dogpile" checker by removing dependency
  on "self" attributes, which seem to be slightly unreliable
  in highly concurrent scenarios.

Release 1.4.2 (9/25/2009)
=========================

* Fix bug where memcached may yank a value after the has_value but before
  the value can be fetched.
* Fix properties for setting the path. Fixes #15.
* Fix the 'TypeError: argument must be an int, or have a fileno()
  method' erorr sporadically emitted by FileSynchronizer under moderate
  load.

Release 1.4.1 (9/10/2009)
=========================

* Fix verification of options to throw an error if a beaker param is an
  empty string.
* Add CacheManager.invalidate function to easily invalidate cache
  spaces created by the use of the cache decorator.
* Add CacheManager.region_invalidate function to easily invalidate cache
  spaces created by the use of the cache_region decorator.
* Fix the InvalidCryptoBackendError exception triggering a TypeError. Patch
  from dz, fixes #13.

Release 1.4 (7/24/2009)
=======================

* Fix bug with hmac on Python 2.4. Patch from toshio, closes ticket #2133
  from the TurboGears2 Trac.
* Fix bug with occasional ValueError from FileNamespaceManager.do_open.
  Fixes #10.
* Fixed bug with session files being saved despite being new and not
  saved.
* Fixed bug with CacheMiddleware overwriting configuration with default
  arguments despite prior setting.
* Fixed bug with SyntaxError not being caught properly in entry point
  discovery.